Added TODO list

--- a/GraphRAG.ipynb
+++ b/GraphRAG.ipynb
@@ -654,20 +654,11 @@
    "id": "fce0a825",
    "metadata": {},
    "source": [
-    "# Q1\n",
-    "Embedding turns my description node into a different node. One with an embedding name, and a field \"type\" with the value being the description name. Is this accessed correctly by the context_summary? Also, which information have we instructed the LLM to give about the document it finds? Because there are more nodes connected to the document other than it gives out. Hence why i am asking if it can find the description - or \"type\" field on the description node.\n",
-    "\n",
-    "# Q2\n",
-    "Only get 1 answer for \"Find all documents imported by dkar\", the answer is two. Implement weights?\n",
-    "\n",
-    "# Q3\n",
-    "Query in semantic search might be too specific. Specifically looking for user, description and filetype\n",
-    "\n",
-    "# Q4\n",
-    "Fix graph search to be an additional search through the nodes instead of through embeddings. Should be something on chatgpt one chat upwards.\n",
-    "\n",
     "## TODO\n",
-    "Høre med Harald (og ingvild) angående ProArc oppsett og metadata. Definere spørsmålet yttligere slik at det er lettere å forstå."
+    "- Which information have we instructed the LLM to give about the document it finds? Because there are more nodes connected to the document other than it gives out. Hence why i am asking if it can find the description - or \"type\" field on the description node which now has the embedding as its name.\n",
+    "- Only get 1 answer for \"Find all documents imported by dkar\", the answer is two. Implement weights?\n",
+    "- Query in semantic search might be too specific. Specifically looking for user, description and filetype\n",
+    "- Fix graph search to be an additional search through the nodes instead of just retrieving the nodes connected to the nodes the vector search found"
    ]
   }
  ],
