--- a/ocr_testing.ipynb
+++ b/ocr_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "98efa5fd",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "import os\n",
     "import numpy as np\n",
     "import re\n",
-    "import uuid"
+    "import uuid\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "513f07db",
    "metadata": {},
    "outputs": [
@@ -41,7 +42,6 @@
     "            loader = PyPDFLoader(os.path.join(pdf_folder, filename))\n",
     "            docs = loader.load()\n",
     "            \n",
-    "            # Slå sammen alt innhold fra PDF-en til ett Document\n",
     "            full_text = \" \".join([doc.page_content for doc in docs])\n",
     "            new_doc = Document(\n",
     "                page_content=full_text,\n",
@@ -57,40 +57,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "e2f73be2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:12: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:12: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\DKAR\\AppData\\Local\\Temp\\ipykernel_20288\\198283574.py:12: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  re.search(r\"\\d+\\s+\\d+\\s+\\d+\", line) or\n"
+     ]
+    }
+   ],
    "source": [
-    "import re\n",
-    "\n",
-    "def clean_text(documents):\n",
+    "\"\"\" def clean_text(documents):\n",
     "    cleaned_documents = []\n",
     "\n",
     "    for doc in documents:\n",
-    "        raw_text = doc.page_content\n",
+    "        text = doc.page_content\n",
     "\n",
-    "        # Del i linjer for å kunne filtrere tabellrader\n",
-    "        lines = raw_text.splitlines()\n",
+    "        lines = text.splitlines()\n",
     "        filtered_lines = []\n",
     "\n",
     "        for line in lines:\n",
-    "            # Heuristikk for å hoppe over tabeller:\n",
-    "            # mange | eller mange mellomrom/kolonnestruktur\n",
     "            if (\n",
-    "                line.count(\"|\") > 2 or\n",
-    "                re.search(r\"\\s{3,}\", line) or\n",
-    "                re.search(r\";\", line)\n",
+    "                re.search(r\"\\d+\\s+\\d+\\s+\\d+\", line) or\n",
+    "                line.count(\"|\") > 1 or\n",
+    "                len(re.findall(r\"\\d\", line)) > 15\n",
     "            ):\n",
-    "                continue  # hopp over tabellrad\n",
+    "                continue\n",
     "\n",
     "            filtered_lines.append(line)\n",
     "\n",
     "        text = \" \".join(filtered_lines)\n",
     "\n",
-    "        # Normal rensing\n",
-    "        text = text.replace('\\n', ' ').replace('\\r', ' ')\n",
-    "        text = ' '.join(text.split())\n",
+    "        text = re.sub(r\"\")\n",
     "\n",
     "        doc.page_content = text\n",
     "        cleaned_documents.append(doc)\n",
@@ -98,12 +102,46 @@
     "    return cleaned_documents\n",
     "\n",
     "\n",
+    "documents = clean_text(documents)\n",
+    " \"\"\"\n",
+    "\n",
+    "def clean_text(documents):\n",
+    "    cleaned_docs = []\n",
+    "\n",
+    "    for doc in documents:\n",
+    "        lines = doc.page_content.splitlines()\n",
+    "        kept_lines = []\n",
+    "\n",
+    "        for line in lines:\n",
+    "            line = line.strip()\n",
+    "\n",
+    "            if not line:\n",
+    "                continue\n",
+    "\n",
+    "            num_ratio = sum(c.isdigit() for c in line) / max(len(line), 1)\n",
+    "            many_spaces = line.count(\"  \") >= 2\n",
+    "\n",
+    "            if num_ratio > 0.35 and many_spaces:\n",
+    "                continue\n",
+    "\n",
+    "            kept_lines.append(line)\n",
+    "\n",
+    "        text = \"\\n\".join(kept_lines)\n",
+    "\n",
+    "        text = re.sub(r\"[ \\t]+\", \" \", text)\n",
+    "        text = re.sub(r\"\\n{3,}\", \"\\n\\n\", text)\n",
+    "\n",
+    "        doc.page_content = text\n",
+    "        cleaned_docs.append(doc)\n",
+    "\n",
+    "    return cleaned_docs\n",
+    "\n",
     "documents = clean_text(documents)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "df1bfd2c",
    "metadata": {},
    "outputs": [
@@ -111,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created 79 chunks\n"
+      "Created 96 chunks\n"
      ]
     }
    ],
@@ -119,23 +157,35 @@
     "def chunk_documents(documents, chunk_size=1000, chunk_overlap=100):\n",
     "    splitter = RecursiveCharacterTextSplitter(\n",
     "        chunk_size=chunk_size,\n",
-    "        chunk_overlap=chunk_overlap\n",
+    "        chunk_overlap=chunk_overlap,\n",
+    "        separators=[\n",
+    "            \"\\n\\n\",   # seksjoner\n",
+    "            \"\\n\",\n",
+    "            \". \", \"? \", \"! \",\n",
+    "            \" \"\n",
+    "        ]\n",
     "    )\n",
     "\n",
     "    all_chunks = []\n",
     "\n",
     "    for doc in documents:\n",
-    "        # Sørg for at hvert dokument har en stabil ID\n",
     "        document_id = doc.metadata.get(\"document_id\")\n",
     "        if not document_id:\n",
     "            document_id = str(uuid.uuid4())\n",
     "            doc.metadata[\"document_id\"] = document_id\n",
     "\n",
+    "        text = doc.page_content\n",
+    "        text = re.sub(r\"\\s(\\d+\\s+[A-Z][A-Z\\s]+)\", r\"\\n\\n\\1\", text)\n",
+    "\n",
+    "        doc.page_content = text\n",
+    "\n",
     "        doc_chunks = splitter.split_documents([doc])\n",
     "\n",
-    "        for i, chunk in enumerate(doc_chunks):\n",
+    "        for i, chunk in enumerate(doc_chunks, start=1):\n",
+    "            chunk.metadata.clear()\n",
     "            chunk.metadata[\"document_id\"] = document_id\n",
     "            chunk.metadata[\"chunk_index\"] = i\n",
+    "            chunk.metadata[\"source_file\"] = doc.metadata.get(\"source_file\")\n",
     "\n",
     "        all_chunks.extend(doc_chunks)\n",
     "\n",
@@ -143,54 +193,16 @@
     "\n",
     "\n",
     "chunks = chunk_documents(documents)\n",
-    "print(f\"Created {len(chunks)} chunks\")"
+    "print(f\"Created {len(chunks)} chunks\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "2dac71f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_metadata(chunks):\n",
-    "    for i, chunk in enumerate(chunks):\n",
-    "        chunk.metadata['chunk_index'] = i\n",
-    "    \n",
-    "    return chunks\n",
-    "\n",
-    "chunks = add_metadata(chunks)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "a04f21fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Document No: 31028-J-KB-0001 Odfjell Drilling Document Number: 31028-J-KB-0001 Revision: 01 Date: 17.01.2020 Input to WSOG DSA @ ASKELADD SOUTH TEMPLATE L Input to WSOG DSA @ Askeladd South – Template L Document no: 31028-J-KB-0001 Rev: 01 Date: 17.01.20 Document No: 31028-J-KB-0001 Odfjell Drilling Document history Rev Date Description Prepared Controlled Approved 01A 17.01.2020 Issued for DIC GKVA IDKR CAST 01 17.01.2020 Issued for use GKVA IDKR CAST Document signatures Prepared by: Controlled\n",
-      "{'source_file': '31028-J-KB-0001_01_004.PDF', 'document_id': '72188c8e-f595-4cec-a0fa-59477ebfbc61', 'chunk_index': 0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(chunks[0].page_content[:500])\n",
-    "print(chunks[0].metadata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "9598a5b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "serializable_chunks = [\n",
     "    {\"page_content\": c.page_content, \"metadata\": c.metadata}\n",
     "    for c in chunks\n",
